Just updates to make site settings work
Permission/groups dont work yet site settings work for loading and
updating needed to add new field to db for loadConfigParameters to load
them on the settings page.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *.komodoproject
 
 models/db-settings.php
+.idea/.name
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/UserFrosting.iml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
