Added submenus, etc

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 name: UserFrosting
-markdown: redcarpet
 highlighter: pygments
 baseurl: /
 title: UserFrosting
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
