start on user login code

--- a/userfrosting/composer.json
+++ b/userfrosting/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "classmap" : [
-            "./"
+            "auth", "controllers", "models"
         ]
     }
 }
