--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: UserFrosting
 highlighter: pygments
-baseurl: /
+url: http://www.userfrosting.com
 title: UserFrosting
 markdown: redcarpet
 redcarpet:
