--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,6 +2,28 @@
 #Header set Cache-Control "max-age=0, private, no-store, no-cache, must-revalidate"
 
 RewriteEngine On
+# PHP error handling for development servers
+#php_flag display_startup_errors on
+php_flag display_errors on
+#php_flag html_errors on
+#php_flag log_errors on
+#php_flag ignore_repeated_errors off
+#php_flag ignore_repeated_source off
+#php_flag report_memleaks on
+#php_flag track_errors on
+#php_value docref_root 0
+#php_value docref_ext 0
+#php_value error_log /home/path/public_html/domain/PHP_errors.log
+## [see footnote 3] # php_value error_reporting 999999999
+php_value error_reporting -1
+#php_value log_errors_max_len 0
+#
+#<Files PHP_errors.log>
+# Order allow,deny
+# Deny from all
+# Satisfy All
+#</Files>
+
 
 # www. to non-www.
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
