manually merge eb1e3a6 and 26e2abd

--- a/userfrosting/composer.json
+++ b/userfrosting/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "classmap" : [
-            "auth", "controllers", "models", "plugins"
+            "auth", "controllers", "middleware", "models", "plugins"
         ]
     }
 }
