--- a/userfrosting/composer.json
+++ b/userfrosting/composer.json
@@ -21,7 +21,7 @@
         "userfrosting/fortress" : "1.0",
         "phpmailer/phpmailer" : "5.2.10",
         "birke/rememberme" : "1.0.4",
-        "wikimedia/composer-merge-plugin": "1.0"
+        "wikimedia/composer-merge-plugin": "~1"
     },
     "extra": {
         "merge-plugin": {
