--- a/app/composer.json
+++ b/app/composer.json
@@ -12,6 +12,9 @@
         }
     ],
     "version": "4.0.0", 
+    "require": {
+            "wikimedia/composer-merge-plugin": "~1"
+	},
     "extra": {
         "merge-plugin": {
             "include": [
