--- a/app/composer.json
+++ b/app/composer.json
@@ -13,7 +13,7 @@
     ],
     "version": "4.0.0", 
     "require": {
-        "wikimedia/composer-merge-plugin": "~1"
+        "wikimedia/composer-merge-plugin": "v1.3.1"
 	},
     "extra": {
         "merge-plugin": {
@@ -26,7 +26,6 @@
             "merge-extra": false
         }
     }, 
-    "minimum-stability": "dev",
     "autoload": {
         "files" : [
             "defines.php"
