--- a/app/sprinkles/account/composer.json
+++ b/app/sprinkles/account/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "UserFrosting\\": "src/"
+            "UserFrosting\\Account\\": "src/"
         }
     }
 }
