First stab at separating out translatable messages among sprinkles

--- a/app/composer.json
+++ b/app/composer.json
@@ -25,7 +25,8 @@
             "merge-dev": true,
             "merge-extra": false
         }
-    }, 
+    },
+    "minimum-stability": "dev",    
     "autoload": {
         "files" : [
             "defines.php"
