change some defaults for DB and mail

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,6 @@
 UF_MODE=""
+DB_USER="userfrosting"
 DB_PASSWORD="password"
+SMTP_HOST="host.example.com"
+SMTP_USER="relay@example.com"
 SMTP_PASSWORD="password"
