--- a/app/composer.json
+++ b/app/composer.json
@@ -13,8 +13,8 @@
     ],
     "version": "4.0.0", 
     "require": {
-        "wikimedia/composer-merge-plugin": "v1.3.1"
-	},
+        "wikimedia/composer-merge-plugin": "dev-master"
+	}, 
     "extra": {
         "merge-plugin": {
             "include": [
