remove some ShutdownHandler dependencies
no longer providing translations of fatal errors.  Seems like an OK
tradeoff, since otherwise in cases where we can't even set up the
translator, we'd end up with no message at all.

--- a/app/composer.json
+++ b/app/composer.json
@@ -26,7 +26,8 @@
             "merge-extra": false
         }
     },
-    "minimum-stability": "dev",    
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "files" : [
             "defines.php"
