remove sample site sprinkle
Creating a new Sprinkle is now covered in the guide at
https://learn.userfrosting.com.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ app/cache/*
 app/logs/*
 app/sessions/*
 
+# Ignore sample site sprinkle
+app/sprinkles/site-dev
+
 # Ignore vendor (for dev)
 app/vendor/*
 
