Started split of asset system. * Sprinkle load order now stored in separate 'sprinkles.json' file. * Gulp build tasks are in working but largely untested state. * Related changes are in userfrosting/assets (dev)

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,11 @@ app/vendor/*
 build/node_modules/*
 
 # Ignore compiled assets schema
+build/bundle.config.json
 build/bundle.result.json
+
+# Ignore temporary build assets
+build/temp
 
 # Ignore compiled assets (dev)
 public/assets/*
