--- a/app/sprinkles/account/bower.json
+++ b/app/sprinkles/account/bower.json
@@ -21,11 +21,11 @@
         "tests"
     ],
     "dependencies": {
-        "bootstrap-switch": "^2.0.1",
-        "jquery-backstretch":"2.0.4",
-        "metisMenu": "*",
-        "morris.js": "*",
-        "raphael":"*"
+        "bootstrap-switch": "2.0.1",
+        "jquery-backstretch": "2.0.4",
+        "metisMenu": "2.4.2",
+        "morris.js": "0.5.1",
+        "raphael": "2.2.7"
     },
     "resolutions": {
         "jquery": ">= 2.2.4",
