--- a/app/sprinkles/account/bower.json
+++ b/app/sprinkles/account/bower.json
@@ -1,29 +1,24 @@
 {
-    "name": "core-assets",
-    "version": "0.0.1",
-    "homepage": "https://github.com/userfrosting",
-    "authors": [
-        "ssnukala"
-    ],
-    "moduleType": [
-        "node"
-    ],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "assets/vendor",
-        "examples",
-        "demo-resources",
-        "demo",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-    },
-    "resolutions": {
-        "jquery": ">= 2.2.4",
-        "bootstrap": "3.x"
-    }
+  "name": "core-assets",
+  "version": "0.0.1",
+  "homepage": "https://github.com/userfrosting",
+  "authors": [
+    "ssnukala"
+  ],
+  "moduleType": [
+    "node"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "assets/vendor",
+    "examples",
+    "demo-resources",
+    "demo",
+    "test",
+    "tests"
+  ],
+  "dependencies": {}
 }
