--- a/app/sprinkles/account/bundle.config.json
+++ b/app/sprinkles/account/bundle.config.json
@@ -50,6 +50,7 @@
         },
         "js/pages/sign-in-or-register": {
             "scripts": [
+                "vendor/urijs/src/URI.js",
                 "local/core/js/uf-captcha.js",
                 "local/pages/js/sign-in-or-register.js"
             ],
