Database Environment Variables. - Added `DB_DRIVER`  and `DB_PORT` as environment variables. - Normalised behaviour of environment varaibles used in config when not defined.

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,7 @@
 UF_MODE=""
+DB_DRIVER="mysql"
 DB_HOST="localhost"
+DB_PORT="3306"
 DB_NAME="userfrosting"
 DB_USER="userfrosting"
 DB_PASSWORD="password"
