--- a/webserver-configs/nginx.conf
+++ b/webserver-configs/nginx.conf
@@ -22,14 +22,14 @@ server {
     root /usr/share/nginx/project/public;
     server_name example.com;
     ## End - Server Info
-
+    
     ## SSL configuration
-	## It is STRONGLY RECOMMENDED that you use SSL for all traffic to your UF site.
+    ## It is STRONGLY RECOMMENDED that you use SSL for all traffic to your UF site.
     ## Otherwise, you are potentially leaking your users' sensitive info, including passwords!
     ## See https://letsencrypt.org/ to find out how to get a free, trusted SSL cert for your site.
     #
     #listen 443 ssl spdy; # we listen ssl first with spdy second. if browser support spdy it will attempt to upgrade immediately on handshake
-	#listen [::]:443 ssl spdy;
+    #listen [::]:443 ssl spdy;
     ## Certificate paths (example for letsencrypt)
     #ssl_certificate /etc/letsencrypt/live/<cert name>/fullchain.pem;
     #ssl_certificate_key /etc/letsencrypt/live/<cert name>/privkey.pem;
@@ -81,7 +81,7 @@ server {
     }
 
     ## we can cache some static files
-    location ~* \.[^png|gif|jpg|jpeg|ico|css|js|woff|ttf|otf|woff2|eot]$ {
+    location ~* \.(png|gif|jpg|jpeg|ico|css|js|woff|ttf|otf|woff2|eot)$ {
         include /etc/nginx/mime.types;
         expires max;
     }
