Fix option for signing in with email address

--- a/webserver-configs/nginx.conf
+++ b/webserver-configs/nginx.conf
@@ -61,6 +61,7 @@ server {
     ## handle php requests.
     location ~ \.(php)$ {
         # Throw away any requests to execute PHP scripts in other directories
+        # See http://cnedelcu.blogspot.com/2010/05/nginx-php-via-fastcgi-important.html for why this is needed
         location ~ \..*/.*\.php$ {
             return 404;
         }
