--- a/app/sprinkles/account/schema/profile-settings.json
+++ b/app/sprinkles/account/schema/profile-settings.json
@@ -6,6 +6,10 @@
                 "min" : 1,
                 "max" : 20,
                 "message" : "VALIDATE.LENGTH_RANGE"
+            },
+            "required" : {
+                "label" : "&FIRST_NAME",
+                "message" : "VALIDATE.REQUIRED"
             }
         }
     },
