Comments in .env.example

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,8 +1,9 @@
-# this is a comment
+# Sample UserFrosting environment variables definition file.
+# Note that in production, it is strongly recommended that you set these variables directly in your environment instead.
 
 UF_MODE=""
 DB_DRIVER="mysql"
-DB_HOST="localhost"  #some developer enviorments, like some MAMP installations, require you to instead set DB_HOST="127.0.0.1"
+DB_HOST="localhost"  # Some developer environments, like some MAMP installations, require you to instead set DB_HOST="127.0.0.1"
 DB_PORT="3306"
 DB_NAME="userfrosting"
 DB_USER="userfrosting"
