Refactoring composer setup
- Putting composer.json at the project root so it can be picked up by
packagist
- Allowing sprinkles to be managed by composer using a fork of
`composer/installers`

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ _meta/*
 app/.env
 
 # Ignore composer-generated files
-app/composer.lock
-app/composer.phar
+composer.lock
+composer.phar
 
 # Ignore log, cache, and sessions directories
 app/cache/*
