first pass at refactoring initialization system

--- a/app/composer.json
+++ b/app/composer.json
@@ -30,8 +30,10 @@
     "prefer-stable": true,
     "autoload": {
         "files" : [
-            "defines.php",
-            "helpers.php"
-        ]
+            "defines.php"
+        ],
+        "psr-4": {
+            "UserFrosting\\System\\": "system/"
+        }
     }
 }
