New migration CLI tool
Let's save all this work, shall we?
It still misses the actual execution of the migration `up` method
because there’s one issue to solve with the log system.

--- a/composer.json
+++ b/composer.json
@@ -51,9 +51,9 @@
         }
     },
     "scripts": {
-        "migrate" : "UserFrosting\\System\\Bakery\\Migration::run",
-        "debug" : "UserFrosting\\System\\Bakery\\Debug::run",
-        "build-assets" : "UserFrosting\\System\\Bakery\\Assets::run",
+        "migrate" : "UserFrosting\\System\\Bakery\\Migration::main",
+        "debug" : "UserFrosting\\System\\Bakery\\Debug::main",
+        "build-assets" : "UserFrosting\\System\\Bakery\\Assets::main",
         "bake" : [
             "@composer update",
             "@debug",
