--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
 	},
 	"require-dev": {
         "phpunit/phpunit": "^5.7",
+        "mockery/mockery": "*",
         "league/factory-muffin": "^3.0",
         "league/factory-muffin-faker": "^2.0"
     },
