fixes for alerts-page and nginx config

--- a/webserver-configs/nginx.conf
+++ b/webserver-configs/nginx.conf
@@ -58,6 +58,11 @@ server {
     ## This header enables the Cross-site scripting (XSS) filter built into most recent web browsers.
     add_header X-XSS-Protection "1; mode=block"; #optional
 
+    # Allow URLs for certbot acme challenge (Let's Encrypt)
+    location ~ /.well-known {
+        allow all;
+    }
+
     ## handle php requests.
     location ~ \.(php)$ {
         # Throw away any requests to execute PHP scripts in other directories
@@ -85,6 +90,9 @@ server {
     location ~* \.(png|gif|jpg|jpeg|ico|css|js|woff|ttf|otf|woff2|eot)$ {
         include /etc/nginx/mime.types;
         expires max;
+
+        index index.php;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     ## Begin - Index
