--- a/app/sprinkles/core/bower.json
+++ b/app/sprinkles/core/bower.json
@@ -35,7 +35,8 @@
         "jquery-slimscroll": "~1.3.8",
         "fastclick": "^1.0.6",
         "ionicons": "^2.0.1",
-        "urijs": "1.18.4"
+        "urijs": "1.18.4",
+        "pace" : "^0.7"
     },
     "resolutions": {
         "jquery": ">= 2.2.4",
