Update nginx config file

--- a/webserver-configs/nginx.conf
+++ b/webserver-configs/nginx.conf
@@ -28,8 +28,8 @@ server {
     ## Otherwise, you are potentially leaking your users' sensitive info, including passwords!
     ## See https://letsencrypt.org/ to find out how to get a free, trusted SSL cert for your site.
     #
-    #listen 443 ssl spdy; # we listen ssl first with spdy second. if browser support spdy it will attempt to upgrade immediately on handshake
-    #listen [::]:443 ssl spdy;
+    #listen 443 ssl http2;
+    #listen [::]:443 ssl http2;
     ## Certificate paths (example for letsencrypt)
     #ssl_certificate /etc/letsencrypt/live/<cert name>/fullchain.pem;
     #ssl_certificate_key /etc/letsencrypt/live/<cert name>/privkey.pem;
@@ -87,7 +87,7 @@ server {
     }
 
     ## we can cache some static files
-    location ~* \.(png|gif|jpg|jpeg|ico|css|js|woff|ttf|otf|woff2|eot)$ {
+    location ~* \.(png|gif|jpg|jpeg|svg|ico|css|js|woff|ttf|otf|woff2|eot)$ {
         include /etc/nginx/mime.types;
         expires max;
 
