--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	},
 	"require-dev": {
         "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "*",
+        "mockery/mockery": "1.0.0-alpha1",
         "league/factory-muffin": "^3.0",
         "league/factory-muffin-faker": "^2.0"
     },
