--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,10 @@
     "config": {
         "vendor-dir": "app/vendor"
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/userfrosting/installers.git"
-        }
-    ],
     "require": {
         "php": ">=5.6",
         "ext-gd": "*",
-        "composer/installers": "dev-master",
+        "composer/installers": "^1.4.0",
         "symfony/console": "^3.3",
         "wikimedia/composer-merge-plugin": "dev-master"
 	},
