--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ dist: trusty
 
 php:
   - 5.6
-  - 7.0
-  - 7.1
-  - hhvm
+#  - 7.0
+#  - 7.1
+#  - hhvm
 
 services:
   - mysql
 
-env: DB_DRIVER=mysql DB_HOST=127.0.0.1 DB_PORT=3306 DB_NAME=userfrosting DB_USER=travis DB_PASSWORD=
+env: UF_MODE=testing DB_DRIVER=mysql DB_HOST=127.0.0.1 DB_PORT=3306 DB_NAME=userfrosting DB_USER=travis DB_PASSWORD=
 
 before_install:
   - mysql -e 'CREATE DATABASE userfrosting;'
