Resolves #718 - Fixed issue where language preference wasn't properly applied due to a bad type check. - Added locales field to register page.

--- a/app/sprinkles/account/schema/requests/register.yaml
+++ b/app/sprinkles/account/schema/requests/register.yaml
@@ -71,5 +71,11 @@ passwordc:
       min: 12
       max: 100
       message: VALIDATE.LENGTH_RANGE
+locale:
+  validators:
+    required:
+      label: "&LOCALE"
+      domain: server
+      message: VALIDATE.REQUIRED
 captcha:
   validators:
