--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ app/database/userfrosting.db
 
 # Ignore vendor assets
 app/assets/*
+
+# Ignore Vagrant & Homestead VM
+vagrant/Homestead/
+.vagrant/*
