--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -24,6 +24,16 @@
             "name": "Srinivas Nukala"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url":  "git@github.com:userfrosting/uniformresourcelocator.git"
+        },
+        {
+            "type": "git",
+            "url":  "git@github.com:userfrosting/assets.git"
+        }
+    ],
     "require": {
         "doctrine/dbal": "^2.5",
         "filp/whoops": "^2.1",
@@ -40,11 +50,12 @@
         "slim/twig-view": "^1.2",
         "symfony/http-foundation": "*",
         "twig/twig": "^1.18",
-        "userfrosting/assets": ">=5",
+        "userfrosting/assets": "dev-feature-locator",
         "userfrosting/config": "~4.1.0",
         "userfrosting/cache": "~4.1.0",
         "userfrosting/fortress": "~4.1.1",
         "userfrosting/i18n": "~4.1.0",
+        "userfrosting/uniformresourcelocator": "dev-develop",
         "userfrosting/session": "~4.1.0",
         "userfrosting/support": "~4.1.1",
         "vlucas/phpdotenv": "^2"
