--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -47,7 +47,7 @@
         "symfony/http-foundation": "*",
         "twig/twig": "^1.18",
         "userfrosting/assets": "dev-feature-locator",
-        "userfrosting/config": "~4.1.0",
+        "userfrosting/config": "dev-feature-locator",
         "userfrosting/cache": "~4.1.0",
         "userfrosting/fortress": "~4.1.1",
         "userfrosting/i18n": "~4.1.0",
