Starting to migrate seeder locator to new locator service

--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -57,6 +57,9 @@
         "vlucas/phpdotenv": "^2"
     },
     "autoload": {
+        "files" : [
+            "defines.php"
+        ],
         "psr-4": {
             "UserFrosting\\Sprinkle\\Core\\": "src/"
         }
