Should fix weird issue with composer plugin

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
         "symfony/console": "^3.3",
-        "wikimedia/composer-merge-plugin": "dev-master"
+        "wikimedia/composer-merge-plugin": "^1.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
