Update `support` package for dev. Leave this in until a proper release can be done. FYI, can't be done in the `core` composer.json file as it's not the root composer file.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
         "symfony/console": "^3.3",
+        "userfrosting/support": "dev-develop as 4.1.2",
         "wikimedia/composer-merge-plugin": "^1.4.0"
     },
     "require-dev": {
