--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignores my text editor metadata
+# Ignores text editor metadata
 *.komodoproject
+.php_cs.cache
 
 # Ignores Mac metadata.  You can configure this globally if you use a Mac: http://islegend.com/development/setting-global-gitignore-mac-windows/
 .DS_Store
