--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_install:
 before_script:
   # install deps and UF
   - composer install
+  - php bakery debug
+  - php bakery build-assets
   - php bakery migrate
 
 script:
