--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "wikimedia/composer-merge-plugin": "^1.4.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.13",
         "phpunit/phpunit": "^5.7",
         "mockery/mockery": "1.0.0-alpha1",
         "league/factory-muffin": "^3.0",
