--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
   - cp app/sprinkles.example.json app/sprinkles.json
   # set up db
   - bash build/before_install.sh $DB
+  # update node
+  - nvm install 10.12.0
 
 before_script:
   # install deps and UF
