--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,39 @@
 version: "3.2"
 services:
   php:
-    image: userforsting.local/php
     restart: unless-stopped
     tty: true
     build:
       context: ./docker/php
     environment:
       - DB_DRIVER=mysql
-      - DB_HOST=mysqlprod
+      - DB_HOST=ufmysql
       - DB_PORT=3306
       - DB_NAME=userfrosting
       - DB_USER=docker
       - DB_PASSWORD=secret
     volumes:
       - .:/app
+      - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     networks:
       - backend
   nginx:
     restart: unless-stopped
     tty: true
     ports:
-      - "8570:80"
-      - "8581:443"
+      - "8591:80"
+      - "8592:443"
     build:
       context: ./docker/nginx
     volumes:
       - .:/app
     depends_on:
       - php
-      - mysql
+      - ufmysql
     networks:
       - frontend
       - backend
-  mysql:
+  ufmysql:
     image: mysql:5.7
     networks:
       - backend
@@ -43,15 +43,16 @@ services:
       - MYSQL_USER=docker
       - MYSQL_PASSWORD=secret
     ports:
-      - 8571:3306
+      - 8593:3306
     volumes:
       - userfrosting-db:/var/lib/mysql
   composer:
-    image: composer/composer
+    image: "composer"
     volumes:
       - .:/app
     working_dir: /app
     command: -V
+
   node:
     image: node:alpine
     build:
@@ -60,9 +61,11 @@ services:
       - .:/app
     working_dir: /app/build
     command: npm run uf-assets-install
+
 volumes:
   userfrosting-db:
     driver: local
+
 networks:
   frontend:
   backend:
