--- a/docker-compose-testdb.yml
+++ b/docker-compose-testdb.yml
@@ -1,80 +1,78 @@
 version: "3.2"
 services:
   php:
-    image: regsevak.com/php
     restart: unless-stopped
     tty: true
     build:
       context: ./docker/php
     environment:
       - DB_DRIVER=mysql
-      - DB_HOST=mysqlprod
+      - DB_HOST=ufmysql
       - DB_PORT=3306
-      - DB_NAME=uf42chinmaya_dbdocker
+      - DB_NAME=userfrosting
       - DB_USER=docker
       - DB_PASSWORD=secret
       - DB_TEST_DRIVER=mysql
       - DB_TEST_HOST=mysqltest
       - DB_TEST_PORT=3306
-      - DB_TEST_NAME=uf42chinmaya_test_dbdocker
+      - DB_TEST_NAME=userfrosting_test
       - DB_TEST_USER=docker
       - DB_TEST_PASSWORD=secret
-      - TEST_DB=test_chinmaya
+      - TEST_DB=test_ufdb
     volumes:
       - .:/app
+      - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     networks:
       - backend
   nginx:
     restart: unless-stopped
     tty: true
     ports:
-      - "8580:80"
-      - "8581:443"
+      - "8591:80"
+      - "8592:443"
     build:
       context: ./docker/nginx
     volumes:
       - .:/app
     depends_on:
       - php
-      - mysqlprod
-      - mysqltest
+      - ufmysql
+      - ufmysqltest
     networks:
       - frontend
       - backend
-  mysqlprod:
+  ufmysql:
     image: mysql:5.7
     networks:
       - backend
     environment:
-      - MYSQL_DATABASE=uf42chinmaya_dbdocker
+      - MYSQL_DATABASE=userfrosting
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_USER=docker
       - MYSQL_PASSWORD=secret
     ports:
-      - 8571:3306
+      - 8593:3306
     volumes:
-      - uf42chinmaya-db:/var/lib/mysql
-  mysqltest:
+      - userfrosting-db:/var/lib/mysql
+  ufmysqltest:
     image: mysql:5.7
     networks:
       - backend
     environment:
-      - MYSQL_DATABASE=uf42chinmaya_test_dbdocker
+      - MYSQL_DATABASE=userfrosting_test
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_USER=docker
       - MYSQL_PASSWORD=secret
     ports:
-      - 8572:3306
+      - 8594:3306
     volumes:
-      - uf42chinmaya-testdb:/var/lib/mysql
-
+      - userfrosting-test-db:/var/lib/mysql
   composer:
-    image: composer/composer
+    image: "composer"
     volumes:
       - .:/app
     working_dir: /app
     command: -V
-
   node:
     image: node:alpine
     build:
@@ -83,13 +81,11 @@ services:
       - .:/app
     working_dir: /app/build
     command: npm run uf-assets-install
-
 volumes:
-  uf42chinmaya-db:
+  userfrosting-db:
     driver: local
-  uf42chinmaya-testdb:
+  userfrosting-test-db:
     driver: local
-
 networks:
   frontend:
   backend:
